# burger_flip_game

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/shaders/: custom_shader.wgsl
crates/internal_bevy_auto_plugin_macros/: Cargo.toml
crates/internal_bevy_auto_plugin_macros/src/: lib.rs
src/: audio.rs  dev_tools.rs  lib.rs  main.rs
src/demo/: level.rs
src/game/: bun.rs  mod.rs  pan.rs  pan_controller.rs  patty.rs
src/screens/: credits.rs  gameplay.rs  mod.rs
web/: index.html
