[package]
name = "internal_bevy_auto_plugin_macros"
authors = ["bstriker <strikeforcezero@gmail.com>"]
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
thiserror = { workspace = true }
